Fixed deletion method in asset model view and refactored employee deletion logic

--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -6,11 +6,11 @@
 <td><%= model.get('supplier') %></td>
 <td><%= model.get('status') %></td>
 <td>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip edit-asset">
     <span class="glyphicon glyphicon-edit"></span>
   </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip">
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip assign-asset">
     <span class="glyphicon glyphicon-hand-up"></span>
   </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip delete-asset">&nbsp;x&nbsp;</button>
 </td>
