--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -5,16 +5,16 @@
 <td><%= model.get('user_role') %></td>
 <td><%= model.get('date_employed') %></td>
 <td>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip viewEetails" data-original-title="View Details">
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
     <span class="glyphicon glyphicon-search"></span>
   </button>
-  <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip editEmployee" data-original-title="Edit">
+  <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-employee" data-original-title="Edit">
     <span class="glyphicon glyphicon-edit"></span>
   </button>
-  <button type="button" data-toggle="modal" data-target="#reset-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip resetPassword" data-original-title="Reset Password">
+  <button type="button" data-toggle="modal" data-target="#reset-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip reset-password" data-original-title="Reset Password">
     <span class="glyphicon glyphicon-lock"></span>
   </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip deleteEmployee" data-original-title="Delete">&nbsp;x&nbsp;</button>
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip delete-employee" data-original-title="Delete">&nbsp;x&nbsp;</button>
 </td>
 <script>
   $('.tool-tip').tooltip();
