--- a/app/scripts/templates/login-form.ejs
+++ b/app/scripts/templates/login-form.ejs
@@ -6,13 +6,13 @@
       <div class="form-group">
         <label for="email" class="col-sm-12">Email</label>
         <div class="col-sm-12">
-          <input type="text" value='admin@admin.com' class="form-control" id="email">
+          <input type="text" class="form-control" id="email">
         </div>
       </div>
       <div class="form-group">
         <label for="password" class="col-sm-12">Password <a href="/reset-password">(Forgot Password)</a></label>
         <div class="col-sm-12">
-          <input type="password" value='admin123' class="form-control" id="password">
+          <input type="password" class="form-control" id="password">
         </div>
       </div>
       <div class="form-group">
