major refactoring done

--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -2,7 +2,8 @@
 <td></td>
 <td><%= model.get('asset_type') %></td>
 <td><%= model.get('serial_number') %></td>
-<td><%= model.get('date_purchased') %></td>
+<% var dp = new Date(model.get('date_purchased')) %>
+<td><%= dp.getMonth() + 1 + '/' + dp.getDate() + '/' + dp.getFullYear() %></td>
 <td><%= model.get('supplier') %></td>
 <td><%= model.get('status') %></td>
 <td>
