--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -91,8 +91,20 @@
     <!-- /.modal -->
   </div>
 </div>
+
+<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <!-- <div class="modal-dialog">
+    <div class="modal-content"> -->
+  <!-- FORM -->
+
+  <!-- FORM END -->
+  <!-- </div> -->
+  <!-- /.modal-content -->
+  <!-- </div> -->
+  <!-- /.modal-dialog -->
+</div>
 <hr>
-<table class="table table-striped" id='asset_list'>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
