--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -31,16 +31,16 @@
 
               <div class="form-group">
                 <label for="asset_name">Name</label>
-                <input type="text" class="form-control" id="asset_name">
+                <input type="text" class="form-control" id="asset_name" maxlength="30">
               </div>
               <div class="form-group">
                 <label for="asset_description">Description</label>
-                <textarea class="form-control" id="asset_description"></textarea>
+                <textarea class="form-control" id="asset_description" maxlength="160"></textarea>
               </div>
               <div class="form-group row">
                 <div class="col-xs-6">
                   <label for="asset_type">Type</label>
-                  <input type="text" class="form-control" id="asset_type" placeholder="e.g., Printer, Laptop">
+                  <input type="text" class="form-control" id="asset_type" placeholder="e.g., Printer, Laptop" maxlength="30">
                 </div>
                 <div class="col-xs-6">
                   <label for="date_purchased">Date Purchased</label>
@@ -63,16 +63,16 @@
                 </div>
                 <div class="col-xs-6">
                   <label for="serial_number">Serial Number</label>
-                  <input type="text" class="form-control" id="serial_number">
+                  <input type="text" class="form-control" id="serial_number" maxlength="30">
                 </div>
               </div>
               <div class="form-group">
                 <label for="supplier">Supplier</label>
-                <input type="text" class="form-control" id="supplier">
+                <input type="text" class="form-control" id="supplier" maxlength="30">
               </div>
               <div class="form-group">
                 <label for="reason">Reason for Purchase?</label>
-                <textarea class="form-control" id="reason"></textarea>
+                <textarea class="form-control" id="reason" maxlength="160"></textarea>
               </div>
 
             </div>
