--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -39,7 +39,14 @@
 	    <label for="birthdate">Date of Birth</label>
 	    <input type="text" class="form-control birthdate" id="date_of_birth" value="<%= model.get('date_of_birth') %>">
 	    <script>
-	      $('.birthdate').datepicker();
+	      var nowTemp = new Date();
+        var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+
+        $('.birthdate').datepicker({
+          onRender: function(date) {
+            return date.valueOf() > now.valueOf() ? 'disabled' : '';
+          }
+        });
 	    </script>
 	  </div>
 	</div>
@@ -59,7 +66,14 @@
 	    <label for="employeddate">Date Employed</label>
 	    <input type="text" class="form-control employeddate" id="date_employed" value="<%= model.get('date_employed') %>">
 	    <script>
-	    $('.employeddate').datepicker();
+	    	var nowTemp = new Date();
+        var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+
+        $('.employeddate').datepicker({
+          onRender: function(date) {
+            return date.valueOf() > now.valueOf() ? 'disabled' : '';
+          }
+        });
 	    </script>
 	  </div>
 	</div>
