--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     color: #000;
     padding: 0.2em 0;
 }
+textarea.form-control {resize:vertical !important; }
 
 /* Space out content a bit */
 body {
