some ui updates on Asset Management section

--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -114,14 +114,12 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Assigned To</th>
-      <th>Type</th>
-      <th>Serial Number</th>
-      <th>Date Purchased</th>
-      <th>Supplier</th>
-      <th>Status</th>
-      <th></th>
+      <th class="col-sm-2">Name</th>
+      <th class="col-sm-2">Status</th>
+      <th class="col-sm-2">Date Purchased</th>
+      <th class="col-sm-2">Assigned To</th>
+      <th class="col-sm-2">Serial Number</th>
+      <th class="col-sm-2" style="text-align:center"> Actions </th>
     </tr>
   </thead>
   <tbody class="assets-list">
