--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -1,11 +1,12 @@
 <td><%= model.get('asset_name') %></td>
-<td></td>
-<td><%= model.get('asset_type') %></td>
-<td><%= model.get('serial_number') %></td>
-<td><%= model.getDatePurchased() %></td>
-<td><%= model.get('supplier') %></td>
 <td><%= model.get('status') %></td>
-<td>
+<td><%= model.getDatePurchased() %></td>
+<td></td>
+<td><%= model.get('serial_number') %></td>
+<td style="text-align:center">
+	<button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
+	  <span class="glyphicon glyphicon-search"></span>
+	</button>
   <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-asset" data-original-title="Edit">
     <span class="glyphicon glyphicon-edit"></span>
   </button>
