more ui changes

--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -114,8 +114,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th class="col-sm-2">Name</th>
-      <th class="col-sm-2">Status</th>
+      <th class="col-sm-1">Status</th>
+      <th class="col-sm-3">Item Name</th>
       <th class="col-sm-2">Date Purchased</th>
       <th class="col-sm-2">Assigned To</th>
       <th class="col-sm-2">Serial Number</th>
