--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -22,7 +22,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <!-- FORM -->
-          <form action="/" method="post" role="form" id="add-form">
+          <form role="form" id="add-form">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
               <h4 class="modal-title" id="myModalLabel">Add New Asset</h4>
