--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -23,7 +23,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <!-- FORM -->
-          <form role="form" id="addForm">
+          <form role="form" id="add-form">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
               <h4 class="modal-title" id="myModalLabel">Add New Employee</h4>
@@ -52,8 +52,8 @@
                 <div class="col-xs-6">
                   <label for="status">Gender</label>
                   <select class="gender-picker" id="gender">
-                    <option>Male</option>
-                    <option>Female</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
                   </select>
                   <script>
                   $('.gender-picker').selectpicker();
@@ -171,9 +171,9 @@
       <th>Assets</th>
       <th>Full Name</th>
       <th>Date of Birth</th>
-      <th>Email</th>
-      <th>User Role</th>
       <th>Date Employed</th>
+      <th>Email</th>
+      <th>Role</th>
       <th></th>
     </tr>
   </thead>
