--- a/app/scripts/templates/login-form.ejs
+++ b/app/scripts/templates/login-form.ejs
@@ -16,8 +16,9 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-12">
+        <div class="col-sm-12 btns">
           <button type="submit" class="btn btn-add">Log In <span class="glyphicon glyphicon-circle-arrow-right"></span></button>
+          <button type="submit" class="btn btn-add btn-load" disabled>Please wait...</button>
         </div>
       </div>
       </form>
