--- a/app/scripts/templates/asset-edit.ejs
+++ b/app/scripts/templates/asset-edit.ejs
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <!-- FORM -->
-    <form action="/" method="post" role="form" id="editform">
+    <form role="form" id="edit-form">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel">Add New Asset</h4>
