--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -67,6 +67,7 @@
                   var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
 
                   $('.birthdate').datepicker({
+                    autoclose: true,
                     onRender: function(date) {
                       return date.valueOf() > now.valueOf() ? 'disabled' : '';
                     }
@@ -94,6 +95,7 @@
                     var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
 
                     $('.employeddate').datepicker({
+                      autoclose: true,
                       onRender: function(date) {
                         return date.valueOf() > now.valueOf() ? 'disabled' : '';
                       }
