--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -50,6 +50,7 @@
                     var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
 
                     $('.date-purchased').datepicker({
+                      autoclose: true,
                       onRender: function(date) {
                         return date.valueOf() > now.valueOf() ? 'disabled' : '';
                       }
