--- a/app/scripts/templates/login-form.ejs
+++ b/app/scripts/templates/login-form.ejs
@@ -3,6 +3,9 @@
     <div class="panel-heading"><h4>User Login</h4></div>
     <div class="panel-body">
       <form action="/" method="POST" class="form-horizontal login-form" role="form">
+      <div class="alert alert-danger hidden">
+        Wrong <strong>username</strong> or <strong>password</strong>! Please try again.
+      </div>
       <div class="form-group">
         <label for="email" class="col-sm-12">Email</label>
         <div class="col-sm-12">
