--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -4,9 +4,9 @@
 <td></td>
 <td><%= model.get('serial_number') %></td>
 <td style="text-align:center">
-	<button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
-	  <span class="glyphicon glyphicon-search"></span>
-	</button>
+  <a href="/assets/<%= model.get('_id') %>"  data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
+	  <span class="glyphicon glyphicon-search"> </span>
+	</a>
   <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-asset" data-original-title="Edit">
     <span class="glyphicon glyphicon-edit"></span>
   </button>
