modified action buttons to display permanently

--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -4,7 +4,7 @@
 <td><%= model.getDateEmployed() %></td>
 <td><%= model.get('email') %></td>
 <td><%= model.get('user_role') %></td>
-<td>
+<td style="text-align:center">
   <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip view-details" data-original-title="View Details">
     <span class="glyphicon glyphicon-search"></span>
   </button>
