--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -167,7 +167,7 @@
       <th>Date Employed</th>
       <th>Email</th>
       <th>Role</th>
-      <th></th>
+      <th style="text-align:center">Actions</th>
     </tr>
   </thead>
   <tbody class="employees-list">
