Fix on validation special characters on Assets

--- a/app/scripts/templates/asset-edit.ejs
+++ b/app/scripts/templates/asset-edit.ejs
@@ -4,7 +4,7 @@
     <form role="form" id="edit-form">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Add New Asset</h4>
+        <h4 class="modal-title" id="myModalLabel">Edit Asset</h4>
       </div>
       <div class="modal-body">
 
