--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -104,15 +104,19 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="email">Email Address</label>
-                <input type="text" class="form-control" id="email" placeholder="name@globalzeal.net">
+		<label for="email">Email Address <span class="email-error">- email address is taken!</span></label>
+		<input type="text" class="form-control" id="email" placeholder="your.name@globalzeal.net">
               </div>
 
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-add">
-                <span class="glyphicon glyphicon-ok-sign"></span> Add Employee </button>
+	      <div class="btns">
+		<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+		<button type="submit" class="btn btn-add">
+		  <span class="glyphicon glyphicon-ok-sign"></span> Add Employee
+		</button>
+		<button type="submit" class="btn btn-add btn-load" disabled>Please wait..</button>
+	      </div>
             </div>
           </form>
           <!-- FORM END -->
