--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -68,9 +68,10 @@
 
                   $('.birthdate').datepicker({
                     autoclose: true,
-                    onRender: function(date) {
-                      return date.valueOf() > now.valueOf() ? 'disabled' : '';
-                    }
+                    endDate: new Date
+                    // onRender: function(date) {
+                    //   return date.valueOf() > now.valueOf() ? 'disabled' : '';
+                    // }
                   });
                   </script>
                 </div>
@@ -96,9 +97,10 @@
 
                     $('.employeddate').datepicker({
                       autoclose: true,
-                      onRender: function(date) {
-                        return date.valueOf() > now.valueOf() ? 'disabled' : '';
-                      }
+                      endDate: new Date
+                      // onRender: function(date) {
+                      //   return date.valueOf() > now.valueOf() ? 'disabled' : '';
+                      // }
                     });
                   </script>
                 </div>
