--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -33,25 +33,25 @@
               <div class="form-group row">
                 <div class="col-xs-4">
                   <label for="first_name">First Name</label>
-                  <input type="text" class="form-control" id="first_name" required>
+                  <input type="text" class="form-control" id="first_name">
                 </div>
                 <div class="col-xs-4">
                   <label for="middle_name">Middle Name</label>
-                  <input type="text" class="form-control" id="middle_name" required>
+                  <input type="text" class="form-control" id="middle_name">
                 </div>
                 <div class="col-xs-4">
                   <label for="last_name">Last Name</label>
-                  <input type="text" class="form-control" id="last_name" required>
+                  <input type="text" class="form-control" id="last_name">
                 </div>
               </div>
               <div class="form-group">
                 <label for="description">Address</label>
-                <input type="text" class="form-control" id="address" required>
+                <input type="text" class="form-control" id="address">
               </div>
               <div class="form-group row">
                 <div class="col-xs-6">
                   <label for="status">Gender</label>
-                  <select class="gender-picker" id="gender" required>
+                  <select class="gender-picker" id="gender">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                   </select>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-xs-6">
                   <label for="birthdate">Date of Birth</label>
-                  <input type="text" class="form-control birthdate" id="date_of_birth" required>
+                  <input type="text" class="form-control birthdate" id="date_of_birth">
                   <script>
                   var nowTemp = new Date();
                   var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
@@ -78,7 +78,7 @@
               <div class="form-group row">
                 <div class="col-xs-6">
                   <label for="status">User Role</label>
-                  <select class="role-picker" id="user_role" required>
+                  <select class="role-picker" id="user_role">
                     <option value="admin">Admin</option>
                     <option value="custodian">Custodian</option>
                     <option value="employee">Employee</option>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-xs-6">
                   <label for="employeddate">Date Employed</label>
-                  <input type="text" class="form-control employeddate" id="date_employed" required>
+                  <input type="text" class="form-control employeddate" id="date_employed">
                   <script>
                     var nowTemp = new Date();
                     var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
@@ -105,7 +105,7 @@
               </div>
               <div class="form-group">
 		            <label for="email">Email Address <span class="email-error">- email address is taken!</span></label>
-		            <input type="email" class="form-control" id="email" placeholder="your.name@globalzeal.net" required>
+		            <input type="email" class="form-control" id="email" placeholder="your.name@globalzeal.net">
               </div>
             </div>
             <div class="modal-footer">
