--- a/app/scripts/templates/employee-details.ejs
+++ b/app/scripts/templates/employee-details.ejs
@@ -1,2 +1,97 @@
-<h1 class="full-name">Elizar Pepino</h1>
-<p>Hey there- My name is Elizar</p>
+<hr />
+<div class="row">
+  <div class="col-sm-6">
+    <a href="/employees" class="btn btn-default btn-sm pull-left"><span class="glyphicon glyphicon-circle-arrow-left"></span> Back to List </a>
+  </div>
+  <div class="col-sm-6">
+    <div class=" pull-right">
+      <button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span> Edit </button>
+      <button type="button" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-remove-circle"></span> Delete </button>
+    </div>
+  </div>
+</div>
+<div class="row-fluid">
+  <br />
+  <div class="col-sm-4">
+    <h3><%= model.get('first_name') %></h3>
+    <small>FIRST NAME</small>
+  </div>
+  <div class="col-sm-4">
+    <h3><%= model.get('middle_name') %></h3>
+    <small>MIDDLE NAME</small>
+  </div>
+  <div class="col-sm-4">
+    <h3><%= model.get('last_name') %></h3>
+    <small>LAST NAME</small>
+  </div>
+</div>
+<div class="row-fluid">
+  <br>
+  &nbsp;
+  <hr>
+</div>
+<div class="row-flui">
+  <div class="col-sm-12">
+    <h3><%= model.get('email') %></h3>
+    <small>EMAIL</small>
+    <hr>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="col-sm-12">
+    <h4><%= model.get('address') %></h4>
+    <small>ADDRESS</small>
+    <hr>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="col-sm-6">
+    <h4><%= model.get('gender') %></h4>
+    <small>GENDER</small>
+  </div>
+  <div class="col-sm-6">
+    <h4><%= model.get('date_of_birth') %></h4>
+    <small>BIRTHDAY</small>
+  </div>
+</div>
+<div class="row-fluid">
+  <br>
+  &nbsp;
+  <hr>
+</div>
+<div class="row-fluid">
+  <div class="col-sm-6">
+    <h4><%= model.get('user_role') %></h4>
+    <small>USER ROLE</small>
+  </div>
+  <div class="col-sm-6">
+    <h4><%= model.get('date_employed') %></h4>
+    <small>DATE EMPLOYED</small>
+  </div>
+</div>
+<div class="row-fluid">
+  <br>
+  &nbsp;
+  <hr>
+</div>
+<div class="row-fluid">
+  <div class="col-sm-12">
+    <h4>None</h4>
+    <small>ASSETS</small>
+    <hr>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
