edited the date in edit form just to accept dates lesser than the current date

--- a/app/scripts/templates/asset-edit.ejs
+++ b/app/scripts/templates/asset-edit.ejs
@@ -30,9 +30,7 @@
 
             $('.date-purchased').datepicker({
               autoclose: true,
-              onRender: function(date) {
-                return date.valueOf() > now.valueOf() ? 'disabled' : '';
-              }
+              endDate: new Date
             });
             </script>
           </div>
