--- a/app/scripts/templates/asset-edit.ejs
+++ b/app/scripts/templates/asset-edit.ejs
@@ -4,10 +4,9 @@
     <form role="form" id="edit-form">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Add New Asset</h4>
+        <h4 class="modal-title" id="myModalLabel">Edit Asset</h4>
       </div>
       <div class="modal-body">
-
         <div class="form-group">
           <label for="asset_name">Name</label>
           <input type="text" class="form-control" id="asset_name" maxlength="30" value="<%=model.get('asset_name')%>">
@@ -67,7 +66,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"> Cancel </button>
-        <button type="submit" class="btn btn-add">
+        <button type="submit" class="btn btn-edit">
           <span class="glyphicon glyphicon-ok-sign"></span> Save Changes </button>
       </div>
     </form>
