--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -11,7 +11,7 @@
   <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip edit-employee" data-original-title="Edit">
     <span class="glyphicon glyphicon-edit"></span>
   </button>
-  <button type="button" data-toggle="modal" data-target="#reset-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip reset-password" data-original-title="Reset Password">
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip reset-password" data-original-title="Reset Password">
     <span class="glyphicon glyphicon-lock"></span>
   </button>
   <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip delete-employee" data-original-title="Delete">&nbsp;x&nbsp;</button>
