--- a/app/scripts/templates/asset-edit.ejs
+++ b/app/scripts/templates/asset-edit.ejs
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <!-- FORM -->
-    <form role="form" id="edit-form">
+    <form action="/" role="form" id="edit-form">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel">Edit New Asset</h4>
@@ -64,9 +64,12 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal"> Cancel </button>
-        <button type="submit" class="btn btn-add" id="save_btn">
-          <span class="glyphicon glyphicon-ok-sign"></span> Save Changes </button>
+      	<div class="btns">
+	        <button type="button" class="btn btn-default" data-dismiss="modal"> Cancel </button>
+	        <button type="submit" class="btn btn-add" id="save_btn">
+	          <span class="glyphicon glyphicon-ok-sign"></span> Save Changes </button>
+	        <button type="submit" class="btn btn-add btn-load" disabled> Saving Changes... </button>
+      	</div>
       </div>
     </form>
     <!-- FORM END -->
