--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -86,9 +86,12 @@
 
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-add">
-                <span class="glyphicon glyphicon-ok-sign"></span> Add Asset </button>
+            	<div class="btns">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					<button type="submit" class="btn btn-add">
+					<span class="glyphicon glyphicon-ok-sign"></span> Add Asset </button>
+					<button type="submit" class="btn btn-add btn-load" disabled>Please wait..</button>
+            	</div>
             </div>
           </form>
           <!-- FORM END -->
