--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -90,9 +90,13 @@
 	</div>
       </div>
       <div class="modal-footer">
-	  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-	  <button type="submit" class="btn btn-edit">
-	    <span class="glyphicon glyphicon-ok-sign"></span> Save Changes</button>
+      	<div class="btns">
+			<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+			<button type="submit" class="btn btn-edit">
+				<span class="glyphicon glyphicon-ok-sign"></span> Save Changes
+			</button>
+			<button type="submit" class="btn btn-add btn-load" disabled>Please wait..</button>
+      	</div>
       </div>
     </form>
   </div>
