Refactored assets and employee section

--- a/app/scripts/templates/employee-details.ejs
+++ b/app/scripts/templates/employee-details.ejs
@@ -50,7 +50,7 @@
     <small>GENDER</small>
   </div>
   <div class="col-sm-6">
-    <h4><%= model.get('date_of_birth') %></h4>
+    <h4><%= model.getDateOfBirth() %></h4>
     <small>BIRTHDAY</small>
   </div>
 </div>
@@ -65,7 +65,7 @@
     <small>USER ROLE</small>
   </div>
   <div class="col-sm-6">
-    <h4><%= model.get('date_employed') %></h4>
+    <h4><%= model.getDateEmployed() %></h4>
     <small>DATE EMPLOYED</small>
   </div>
 </div>
