--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -92,7 +92,7 @@
       <div class="modal-footer">
       	<div class="btns">
 			<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-			<button type="submit" class="btn btn-edit">
+			<button type="submit" class="btn btn-add">
 				<span class="glyphicon glyphicon-ok-sign"></span> Save Changes
 			</button>
 			<button type="submit" class="btn btn-add btn-load" disabled>Please wait..</button>
