--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -107,7 +107,7 @@
               </div>
               <div class="form-group">
 		            <label for="email">Email Address <span class="email-error">- email address is taken!</span></label>
-		            <input type="email" class="form-control" id="email" placeholder="your.name@globalzeal.net">
+		            <input type="text" class="form-control" id="email" placeholder="your.name@globalzeal.net">
               </div>
             </div>
             <div class="modal-footer">
