--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -1,4 +1,4 @@
-<div class="modal-dialog"
+<div class="modal-dialog">
   <div class="modal-content">
     <form role="form" id="edit-form">
       <div class="modal-header">
