--- a/app/scripts/templates/employee-edit.ejs
+++ b/app/scripts/templates/employee-edit.ejs
@@ -45,11 +45,12 @@
         var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
 
         $('.birthdate').datepicker({
-          autoclose: true,
-          onRender: function(date) {
-            return date.valueOf() > now.valueOf() ? 'disabled' : '';
-          }
-        });
+				autoclose: true,
+				endDate: new Date
+				// onRender: function(date) {
+				//   return date.valueOf() > now.valueOf() ? 'disabled' : '';
+				// }
+			});
 	    </script>
 	  </div>
 	</div>
@@ -76,11 +77,12 @@
         var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
 
         $('.employeddate').datepicker({
-          autoclose: true,
-          onRender: function(date) {
-            return date.valueOf() > now.valueOf() ? 'disabled' : '';
-          }
-        });
+				autoclose: true,
+				endDate: new Date
+				// onRender: function(date) {
+				//   return date.valueOf() > now.valueOf() ? 'disabled' : '';
+				// }
+			});
 	    </script>
 	  </div>
 	</div>
